# oxsh

./: .gitignore  Cargo.toml  LICENSE  README.md  config.default.toml  deny.toml  install.ps1  install.sh
src/: builtins.rs  completer.rs  config.rs  context.rs  executor.rs  highlight.rs  main.rs  parser.rs  prompt.rs  scripting.rs  setup.rs  shell.rs  structured.rs  value.rs
src/defaults/: config_linux.toml  config_windows.toml
tests/: cli.rs
