[package]
name = "oxsh"
version = "0.3.0"
edition = "2024"
authors = ["occhi"]
description = "A next-generation shell combining POSIX compatibility, structured pipelines, and modern UX"
license = "MIT"
repository = "https://github.com/xhon4/oxsh"
homepage = "https://github.com/xhon4/oxsh"
readme = "README.md"
keywords = ["shell", "terminal", "cli", "pipeline", "structured-data"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.29.0"
dirs = "5"
fuzzy-matcher = "0.3"
glob = "0.3.3"
indexmap = { version = "2.0", features = ["serde"] }
nu-ansi-term = "0.50.3"
reedline = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
shellexpand = "3.1.2"
strsim = "0.11"
toml = "1.1.2"
which = "8.0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_Threading",
] }

[dev-dependencies]
rstest = "0.23"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
